--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+img.ant-image-preview-img {
+    display: initial;
+}
+
+div.ant-image-mask-info {
+    display: inline-flex;
+    align-items: center;
+}
